--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,19 +1,19 @@
-/*===== GOOGLE FONTS =====*/
+/* GOOGLE FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 
-/*===== VARIABLES CSS ====*/
+/* CSS VARIABLES */
 :root {
   --header-height: 3rem;
   --font-semi: 600;
 }
 
-/*===== COLORS ====*/
+/* COLORS */
 :root {
   --first-color: #4070f4;
   --second-color: #0e2431;
 }
 
-/*==== FONTS ====*/
+/* FONTS */
 :root {
   --body-font: "Poppins", sans-serif;
   --big-font-size: 2rem;
@@ -39,7 +39,7 @@
   --mb-6: 3rem;
 }
 
-/*==== z-index ====*/
+/* Z-INDEX */
 :root {
   --z-back: -10;
   --z-normal: 1;
@@ -47,7 +47,7 @@
   --z-fixed: 100;
 }
 
-/*==== BASE ====*/
+/* BASE */
 *,
 ::before,
 ::after {
@@ -87,7 +87,7 @@ img {
   display: block;
 }
 
-/*==== CLASS CSS ====*/
+/* CLASS CSS */
 .section-title {
   position: relative;
   font-size: var(--h2-font-size);
@@ -114,7 +114,7 @@ img {
   padding-bottom: 2rem;
 }
 
-/*==== LAYOUT ====*/
+/* LAYOUT */
 .bd-grid {
   max-width: 1024px;
   display: grid;
@@ -135,7 +135,7 @@ img {
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
 }
 
-/*==== NAV ====*/
+/* NAV */
 .nav {
   height: var(--header-height);
   display: flex;
@@ -186,7 +186,7 @@ img {
   cursor: pointer;
 }
 
-/* Active menu */
+/* ACTIVE MENU */
 .active::after {
   position: absolute;
   content: "";
@@ -197,7 +197,77 @@ img {
   background-color: var(--first-color);
 }
 
-/*==== Show menu ====*/
+/* SHOW MENU */
 .show {
   right: 0;
+}
+
+/* HOME */
+.home {
+  height: calc(100vh - 3rem);
+  row-gap: 1rem;
+}
+
+.home__data {
+  align-self: center;
+}
+
+.home__title {
+  font-size: var(--big-font-size);
+  margin-bottom: var(--mb-5);
+}
+.home__title-color {
+  color: var(--first-color);
+}
+
+.home__social {
+  display: flex;
+  flex-direction: column;
+}
+.home__social-icon {
+  width: max-content;
+  margin-bottom: var(--mb-2);
+  font-size: 1.5rem;
+  color: var(--second-color);
+}
+.home__social-icon:hover {
+  color: var(--first-color);
+}
+
+.home__img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 295px;
+}
+
+/* BUTTONS */
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 0.75rem 2.5rem;
+  font-weight: var(--font-semi);
+  border-radius: 0.5rem;
+}
+.button:hover {
+  box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
+}
+
+/* ABOUT */
+.about__container {
+  row-gap: 2rem;
+  text-align: center;
+}
+
+.about__subtitle {
+  margin-bottom: var(--mb-2);
+}
+
+.about__img {
+  justify-self: center;
+}
+.about__img img {
+  width: 200px;
+  border-radius: 0.5rem;
 }
